--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-br">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/x-icon" href="public/bot.png" />
+    <link rel="icon" type="image/x-icon" href="bot.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Assistente Ufopianx</title>
   </head>
